# CooperativeScheduler

./: .gitignore  .gitmodules  CMakeLists.txt  CooperativeSchedulerConfig.cmake  cooperativeschedulerConfig.cmake
include/CooperativeScheduler/: CooperativeScheduler.h
tests/: .gitignore  CMakeLists.txt  googletest
tests/source/: test_CooperativeScheduler.cpp  test_StaticCooperativeScheduler.cpp
